# gobang

./: .gitignore  CMakeLists.txt  README.md  build.sh
main/: main.c  main.h
main/chessboard/: chessboard.c  chessboard.h  chessboard_class.h  chessboard_class_private.h
main/debug/: debug.h
main/parser/: parser.c  parser.h
